; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_send.c_send_unlink_command.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_send.c_send_unlink_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32* }

@BTRFS_SEND_CMD_UNLINK = common dso_local global i32 0, align 4
@BTRFS_SEND_TLV_PATH = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32*, i64, i8*)* @send_unlink_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_unlink_command(%struct.TYPE_6__* %0, i32* %1, i64 %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %9, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %15 = load i32, i32* @BTRFS_SEND_CMD_UNLINK, align 4
  %16 = call i32 @send_command(%struct.TYPE_6__* %14, i32 %15)
  %17 = load i32*, i32** %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call i64 @find_path_len(i32* %17, i64 %18)
  store i64 %19, i64* %10, align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %21 = load i32, i32* @BTRFS_SEND_TLV_PATH, align 4
  %22 = load i64, i64* %10, align 8
  %23 = call i32 @send_add_tlv(%struct.TYPE_6__* %20, i32 %21, i32* null, i64 %22)
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 1
  %26 = load i32*, i32** %25, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* %10, align 8
  %31 = sub i64 %29, %30
  %32 = getelementptr inbounds i32, i32* %26, i64 %31
  %33 = bitcast i32* %32 to i8*
  %34 = load i32*, i32** %6, align 8
  %35 = load i8*, i8** %8, align 8
  %36 = load i64, i64* %7, align 8
  %37 = call i32 @find_path(i8* %33, i32* %34, i8* %35, i64 %36)
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %39 = load i64, i64* %9, align 8
  %40 = call i32 @send_command_finish(%struct.TYPE_6__* %38, i64 %39)
  %41 = load i32, i32* @STATUS_SUCCESS, align 4
  ret i32 %41
}

declare dso_local i32 @send_command(%struct.TYPE_6__*, i32) #1

declare dso_local i64 @find_path_len(i32*, i64) #1

declare dso_local i32 @send_add_tlv(%struct.TYPE_6__*, i32, i32*, i64) #1

declare dso_local i32 @find_path(i8*, i32*, i8*, i64) #1

declare dso_local i32 @send_command_finish(%struct.TYPE_6__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
